--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.9",
     "@mui/x-data-grid": "^6.19.3",
     "@react-oauth/google": "^0.12.1",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
